# typer_cli

./: .buildinfo  .bumpversion.cfg  .flake8  .pre-commit-config.yaml  .pylintrc  404.html  Dockerfile  LICENSE  Makefile  README.md  genindex.html  index.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytemplates_typer_cli.core.html  pytemplates_typer_cli.html  search.html  searchindex.js  sitemap.xml
.github/workflows/: docker.yaml  docs.yaml  lint.yaml  release.yaml  test.yaml
_sources/: index.rst.txt  modules.rst.txt  pytemplates_typer_cli.core.rst.txt
app_reference/app/: index.html
code_reference/module1/: index.html
code_reference/module2/: index.html
developer_guide/commands/: index.html
developer_guide/developer_setup/: index.html
developer_guide/releases/: index.html
developer_guide/workflows/: index.html
docs/: index.md
docs/app_reference/: app.md
docs/code_reference/: module1.md  module2.md
docs/developer_guide/: commands.md  developer_setup.md  workflows.md
docs/extras/: credits.md  file_tree.md
docs/source/: conf.py  modules.rst  pytemplates_pypackage.core.rst  pytemplates_pypackage.rst  pytemplates_typer_cli.rst
docs/user_guide/: installation.md
extras/credits/: index.html
extras/file_tree/: index.html
search/: search_index.json
src/pytemplates_pypackage/: __init__.py
src/pytemplates_pypackage/core/: module1.py
src/pytemplates_typer_cli/: __init__.py  main.py
src/pytemplates_typer_cli/core/: __init__.py  module1.py  module2.py
tests/: __init__.py  test_app.py  test_module1.py  test_module2.py
user_guide/installation/: index.html
user_guide/usage/: index.html
